See #34334. Restart after updating via native executable files